# qpkg-ide

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md  make.py
docker/: Ubuntu-22.04.Dockerfile
libs/: CMakeLists.txt
libs/qpkg-ide-business/: CMakeLists.txt  README.md
libs/qpkg-ide-business/include/qpkg-ide-business/: Layer.hh  Library.hh
libs/qpkg-ide-business/src/: Library.cc
libs/qpkg-ide-core/: CMakeLists.txt
libs/qpkg-ide-core/include/qpkg-ide-core/: Layer.hh  Library.hh
libs/qpkg-ide-core/src/: Library.cc
libs/qpkg-ide-display/: CMakeLists.txt
libs/qpkg-ide-display/include/qpkg-ide-display/: Layer.hh  Library.hh
libs/qpkg-ide-display/src/: AnimateOpening.cc  Internal.hh  Library.cc  Z0.cc
libs/qpkg-ide-platform/: CMakeLists.txt
libs/qpkg-ide-platform/include/qpkg-ide-platform/: Layer.hh  Library.hh
libs/qpkg-ide-platform/src/: Library.cc
libs/qpkg-ide-utility/: CMakeLists.txt
libs/qpkg-ide-utility/include/qpkg-ide-utility/: Layer.hh  Library.hh
libs/qpkg-ide-utility/src/: Asset.cc  Library.cc  Theme.cc
linux/: CMakeLists.txt
linux/src/: main.cc
linux/src/app/: main.cc
